[package]
name = "weather_station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.aarch64-unknown-linux-gnu.dependencies]
rppal="*"

[dependencies]
dht11 = { path = "./dht11" }

[workspace]
members = ["dht11"]